# SpeechToText

./: .dev.env  .gitignore  README.md  pyproject.toml
.azuredevops/: pull_request_template.md
app/: main.py
app/prompts/: human_prompts.json  storingstemplate.txt
app/services/: azure_store_service.py  chat_service.py  openai_service.py  store_service.py  stt_service.py  transcribe_service.py
app/static/css/: menu.css
app/tests/: conftest.py  factories.py  test_azure_store_service.py  test_transcribe_service.py
app/utils/: file_tools.py
app/utils/prompts/: human_prompts.json
notebooks/: 2.0-test-app.ipynb
stt/: .dev.env  .local.env  README.md  pyproject.toml  requirements.txt
stt/app/: constants.py  main.py
stt/app/api/: dependencies.py  main.py
stt/app/api/routes/: audio.py  report.py  root.py  transcript.py
stt/app/models/: session.py  storage.py
stt/app/prompts/: human_prompts.json  systeem_prompt.txt  system_prompt.txt
stt/app/services/: azure_store_service.py  chat_service.py  openai_service.py  prompt_service.py  store_service.py  stt_service.py  transcribe_service.py
stt/app/templates/: header.html
stt/app/tests/: conftest.py  factories.py  test_azure_store_service.py  test_chat_service.py  test_prompt_service.py  test_transcribe_service.py
stt/app/utils/: audio_tools.py
stt/app/utils/prompts/: system_prompt.txt
stt/notebooks/: 1.0-mb-pipeline.ipynb  2.0-test-app.ipynb
stt/ui/: chat.py  main.py  transcribe.py
stt/ui/static/css/: background.css  buttons.css
ui/: chat.py  main.py  utils.py
